# meridian_electronics

./: .gitignore
backend/: .dockerignore  Dockerfile  Dockerfile.lambda  docker-compose.yml  explore_mcp.py  lambda_handler.py  main.py  pyproject.toml
backend/api/: dependencies.py  router.py
backend/api/middlewares/: error_handler.py  request_logger.py
backend/api/routes/: health.py
backend/app_mcp/: server.py
backend/config/: __init__.py  db.py  env.py  logging.py
backend/deploy/terraform/: README.txt  apigateway.tf  ecr.tf  iam.tf  lambda.tf  outputs.tf  variables.tf
backend/modules/customer_agent/: router.py  schema.py  service.py
frontend/: .env.example  env.example  next.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api-proxy/[...path]/: route.ts
frontend/components/: Chat.tsx
frontend/lib/: chat.ts
